Fixes and implement os family callbacks
